[package]
name = "rcards"
version = "0.1.0"
authors = ["Johan Thomsen <jth@dbc.dk>"]
edition = "2018"

[dependencies]
piston2d-graphics = "0.36"
piston2d-opengl_graphics = "0.72"
pistoncore-sdl2_window = "0.63"
piston = "0.49"
rand = "0.7"
piston_window = "0.107"
piston-ai_behavior = "0.31"
piston2d-sprite = "0.59"
find_folder = "0.3"
gfx_device_gl = "0.16.2"
lazy_static = "1.4"
